--- a/App client/src/assets/layout/_content.scss
+++ b/App client/src/assets/layout/_content.scss
@@ -8,5 +8,8 @@
 }
 
 .layout-main {
-    flex: 1 1 auto;
+    flex: 1;
+    display: flex;
+    justify-content: center; /* Centers horizontally */
+    align-items: center; /* Centers vertically */
 }
